# finance-director-ai-coach

./: .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/drills/: finqa_cards_v1.json  finqa_v1_curation.json
docs/learning/: competency-framework.md  domain-framework.md  drill-taxonomy.md  evaluation-contract.md  finqa-import-report.md  scenario-design.md
docs/learning/scenarios/: scenario-001-growth-with-falling-cash.md  scenario-002-growth-at-any-price.md
docs/product/: mvp-scope.md  product-principles.md  target-user.md  vision.md
docs/project-management/: decision-log.md  roadmap.md
docs/technical/: architecture.md  coding-standards.md
scripts/: import_finqa.py
src/finance_director_coach/: __init__.py  __main__.py  cli.py  drills.py  evaluation.py  models.py  practice.py  practice_ui.py  session.py  streamlit_ui.py
src/finance_director_coach/scenarios/: __init__.py  contracts.py  registry.py  scenario_001.py  scenario_001_adapter.py  scenario_002.py  scenario_002_adapter.py  scenario_002_evaluation.py  ui_helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_evaluation.py  test_finqa_drills.py  test_practice.py  test_practice_ui.py  test_scenario_002.py  test_scenario_financials.py  test_scenario_registry.py  test_streamlit_ui.py
tests/fixtures/: finqa_v1_selected_records.json
