[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-director-coach"
version = "0.1.0"
description = "Foundation for a Finance Director and CFO simulation coach."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Finance Director AI Coach Team" }
]
dependencies = [
  "streamlit==1.59.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
